--- a/css/content.css
+++ b/css/content.css
@@ -280,10 +280,11 @@
     margin-bottom: 15px!important;
 }
 
-.map-section .map {
+.map-section .map-wrap {
     overflow: hidden;
+    display: none;
 }
-.map-section .map #map {
+.map-section .map-wrap .map {
     height: 300px;
     width: 100%;
 }
