--- a/app/components/Auction/Add/auctionAddView.html
+++ b/app/components/Auction/Add/auctionAddView.html
@@ -22,7 +22,7 @@
   <h3>Shipment</h3>
   <form name="addAuctionForm" novalidate>
   <div class="form-group half">
-      <input class="form-control my-input" placeholder="{{'texts.from' | i18next}}" ng-model="auction.from" 
+      <input class="form-control my-input" placeholder="{{'texts.auction.from' | i18next}}" ng-model="auction.from"
         ng-class="{'input-error' : addAuctionForm.from.$invalid && (!addAuctionForm.from.$pristine || clicked)}" 
         vs-google-autocomplete
         ng-model="auction.from" 
@@ -42,7 +42,7 @@
     </div>
 
     <div class="form-group half">
-      <input class="form-control my-input" placeholder="{{'texts.to' | i18next}}" ng-model="auction.to" 
+      <input class="form-control my-input" placeholder="{{'texts.auction.to' | i18next}}" ng-model="auction.to"
         ng-class="{'input-error' : addAuctionForm.to.$invalid && (!addAuctionForm.to.$pristine || clicked)}" 
         vs-google-autocomplete
         ng-model="auction.to" 
@@ -61,26 +61,26 @@
         required />
     </div>
     <div class="form-group text-center">
-      <div class="my-button easy-button big-button" ng-click="showMap()">{{'texts.show_map' | i18next}}</div>
+      <div class="my-button easy-button big-button" ng-click="showMap()">{{'texts.show_hidden_map' | i18next}}</div>
     </div>
     <div class="map-wrapper">
       <div id="distance" style="display:none"></div>
       <div id="map" style="display:none"></div>
     </div>
     <div class="form-group half">
-      <input type="text" name="price" class="form-control my-input" placeholder="{{'texts.price' | i18next}}" ng-model="auction.price" 
+      <input type="text" name="price" class="form-control my-input" placeholder="{{'texts.auction.price' | i18next}}" ng-model="auction.price"
           ng-class="{'input-error' : addAuctionForm.price.$invalid && (!addAuctionForm.price.$pristine || clicked)}" 
           required />
     </div>
     <div class="form-group half">
-      <input type="text" name="currency" class="form-control my-input" placeholder="{{'texts.currency' | i18next}}" ng-model="auction.currency" 
+      <input type="text" name="currency" class="form-control my-input" placeholder="{{'texts.auction.currency' | i18next}}" ng-model="auction.currency"
           ng-class="{'input-error' : addAuctionForm.currency.$invalid && (!addAuctionForm.currency.$pristine || clicked)}" 
           required />
     </div>
 
     <div class="form-group half">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="load_from" class="form-control my-input"  id="load_from" placeholder="{{'texts.load_from' | i18next}}"
+        <input type='text' name="load_from" class="form-control my-input"  id="load_from" placeholder="{{'texts.auction.load_from' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.load_from.$invalid && (!addAuctionForm.load_from.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -90,7 +90,7 @@
     </div>
     <div class="form-group half">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="load_to" class="form-control my-input"  id="load_to" placeholder="{{'texts.load_to' | i18next}}"
+        <input type='text' name="load_to" class="form-control my-input"  id="load_to" placeholder="{{'texts.auction.load_to' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.load_to.$invalid && (!addAuctionForm.load_to.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -100,7 +100,7 @@
     </div>
     <div class="form-group half">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="unload_from" class="form-control my-input"  id="unload_from" placeholder="{{'texts.unload_from' | i18next}}"
+        <input type='text' name="unload_from" class="form-control my-input"  id="unload_from" placeholder="{{'texts.auction.unload_from' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.unload_from.$invalid && (!addAuctionForm.unload_from.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -110,7 +110,7 @@
     </div>
     <div class="form-group half">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="unload_to" class="form-control my-input"  id="unload_to" placeholder="{{'texts.unload_to' | i18next}}"
+        <input type='text' name="unload_to" class="form-control my-input"  id="unload_to" placeholder="{{'texts.auction.unload_to' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.unload_to.$invalid && (!addAuctionForm.unload_to.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -121,19 +121,19 @@
     <div class="form-group"></div>
     <h3>Freight</h3>
     <div class="form-group half">
-      <input type="text" name="freight_description" class="form-control my-input" placeholder="{{'texts.freight_description' | i18next}}" ng-model="auction.freight_description" 
+      <input type="text" name="freight_description" class="form-control my-input" placeholder="{{'texts.auction.freight_description' | i18next}}" ng-model="auction.freight_description"
           ng-class="{'input-error' : addAuctionForm.freight_description.$invalid && (!addAuctionForm.freight_description.$pristine || clicked)}" 
           required />
     </div>
     <div class="form-group half">
-      <input type="text" name="freight_type" class="form-control my-input" placeholder="{{'texts.freight_type' | i18next}}" ng-model="auction.freight_type" 
+      <input type="text" name="freight_type" class="form-control my-input" placeholder="{{'texts.auction.freight_type' | i18next}}" ng-model="auction.freight_type"
           ng-class="{'input-error' : addAuctionForm.freight_type.$invalid && (!addAuctionForm.freight_type.$pristine || clicked)}" 
           required />
     </div>
     <div class="form-group half">
       <select class="form-control my-input" ng-model="auction.freight_size"
               ng-class="{'input-error' : addAuctionForm.freight_size.$invalid && (!addAuctionForm.freight_size.$pristine || clicked)}" required>
-        <option value="" disabled selected>{{'texts.freight_size' | i18next}}</option>
+        <option value="" disabled selected>{{'texts.auction.freight_size' | i18next}}</option>
         <option value="1">do 1x1 m<sup>2</sup></option>
         <option value="2">do 2x2 m<sup>2</sup></option>
         <option value="3">více</option>
@@ -142,7 +142,7 @@
     <div class="form-group half">
       <select class="form-control my-input" ng-model="auction.freight_weight"
               ng-class="{'input-error' : addAuctionForm.freight_weight.$invalid && (!addAuctionForm.freight_weight.$pristine || clicked)}" required>
-        <option value="" disabled selected>{{'texts.freight_weight' | i18next}}</option>
+        <option value="" disabled selected>{{'texts.auction.freight_weight' | i18next}}</option>
         <option value="1">do 50kg</option>
         <option value="2">do 100kg</option>
         <option value="3">více</option>
@@ -151,13 +151,13 @@
     <div class="form-group"></div>
     <h3>Auction</h3>
     <div class="form-group half">
-      <input type="text" name="email_addressee" class="form-control my-input" placeholder="{{'texts.email_addressee' | i18next}}" ng-model="auction.email_addressee" 
+      <input type="text" name="email_addressee" class="form-control my-input" placeholder="{{'texts.auction.email_addressee' | i18next}}" ng-model="auction.email_addressee"
           ng-class="{'input-error' : addAuctionForm.email_addressee.$invalid && (!addAuctionForm.email_addressee.$pristine || clicked)}" 
           required />
     </div>
     <div class="form-group half">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="end_auction" class="form-control my-input"  id="end_auction" placeholder="{{'texts.end_auction' | i18next}}"
+        <input type='text' name="end_auction" class="form-control my-input"  id="end_auction" placeholder="{{'texts.auction.end_auction' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.end_auction.$invalid && (!addAuctionForm.end_auction.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -166,22 +166,17 @@
       </div>
     </div> 
     <div class="form-group half">
-      <input type="text" name="min_amount" class="form-control my-input" placeholder="{{'texts.min_amount' | i18next}}" ng-model="auction.min_amount" 
+      <input type="text" name="min_amount" class="form-control my-input" placeholder="{{'texts.auction.min_amount' | i18next}}" ng-model="auction.min_amount"
           ng-class="{'input-error' : addAuctionForm.min_amount.$invalid && (!addAuctionForm.min_amount.$pristine || clicked)}" 
           required />
     </div>
     <div class="form-group half">
-      <input type="text" name="maturity" class="form-control my-input" placeholder="{{'texts.maturity' | i18next}}" ng-model="auction.maturity" 
+      <input type="text" name="maturity" class="form-control my-input" placeholder="{{'texts.auction.maturity' | i18next}}" ng-model="auction.maturity"
           ng-class="{'input-error' : addAuctionForm.maturity.$invalid && (!addAuctionForm.maturity.$pristine || clicked)}" 
-          required />
-    </div>   
-    <div class="form-group half">
-      <input type="text" name="hot" class="form-control my-input" placeholder="{{'texts.hot' | i18next}}" ng-model="auction.hot" 
-          ng-class="{'input-error' : addAuctionForm.hot.$invalid && (!addAuctionForm.hot.$pristine || clicked)}" 
           required />
     </div>
     <div class="form-group text-center">
-      <div class="my-button important-button big-button" ng-click="addAuction()">{{'texts.addAuction' | i18next}}</div>
+      <div class="my-button important-button big-button" ng-click="addAuction()">{{'texts.add_auction' | i18next}}</div>
     </div>
   </form>
 </div>
