--- a/app/components/Account/Registration/registrationView.html
+++ b/app/components/Account/Registration/registrationView.html
@@ -2,9 +2,11 @@
   <h1>{{'texts.registration_employee' | i18next}}</h1>
   <p>{{'texts.registration_text' | i18next}}</p>
   <form name="registrationForm" novalidate>
-    <div class="form-group radio-group">
+    <div class="form-group radio-group half">
       <input type="radio" name="role" class="my-radio" id="transporter" ng-model="user.role" value="2" required/>
       <label for="transporter">{{'texts.transporter' | i18next}}</label>
+    </div>
+    <div class="form-group radio-group half">
       <input type="radio" name="role" class="my-radio" id="sender" ng-model="user.role" value="1"/>
       <label for="sender">{{'texts.sender' | i18next}}</label>
     </div>
