--- a/app/components/Auction/Add/auctionAddView.html
+++ b/app/components/Auction/Add/auctionAddView.html
@@ -1,3 +1,4 @@
+<menu param="{route}"></menu>
 <div class="auction-add-page" ng-open="formLabels('addAuctionForm')" >
   <h1>Add auction</h1>
   <style type="text/css">
