--- a/app/components/Account/ForgotPassword/forgotPasswordView.html
+++ b/app/components/Account/ForgotPassword/forgotPasswordView.html
@@ -1,13 +1,14 @@
 <div class="user-page forget-password-page" ng-open="formLabels('forgotPasswordForm')" >
-    <h1>Forgot your password</h1>
-    <p>Pošlete si na mail nové heslo a pak si ho v sekci "Account" změnte na svoje heslo.</p>
+    <h1>{{'texts.forgot_password' | i18next}}</h1>
+    <p>{{'texts.forgot_password_text' | i18next}}</p>
     <form name="forgotPasswordForm" novalidate>
         <div class="form-group has-feedback has-feedback-left">
-            <input type="email" name="email" class="form-control my-input" placeholder="Email" ng-model="email" ng-class="{'input-error' : forgotPasswordForm.email.$invalid && (!forgotPasswordForm.email.$pristine || clicked)}" required/>
+            <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="email" ng-class="{'input-error' : forgotPasswordForm.email.$invalid && (!forgotPasswordForm.email.$pristine || clicked)}" required/>
             <i class="glyphicon glyphicon-envelope form-control-feedback"></i>
         </div>
         <div class="form-group buttons">
-            <div class="my-button big-button important-button" ng-click="sendMail()">Send password</div>
+            <div class="my-button big-button important-button" ng-click="sendMail()">{{'texts.send_password' | i18next}}</div>
         </div>
     </form>
 </div>
+
