--- a/app/components/Auction/Add/auctionAddView.html
+++ b/app/components/Auction/Add/auctionAddView.html
@@ -1,6 +1,6 @@
 <menu param="{route}"></menu>
 <div class="auction-add-page" ng-open="formLabels('addAuctionForm')" >
-  <h1>Add auction</h1>
+  <h1>{{'texts.auction.add_auction' | i18next}}</h1>
   <style type="text/css">
     #map {
       height: 450px;
@@ -20,7 +20,7 @@
               }); 
   </script>
 
-  <h3>Shipment</h3>
+  <h3>{{'texts.shipment' | i18next}}</h3>
   <form name="addAuctionForm" novalidate>
   <div class="form-group half">
       <input class="form-control my-input" placeholder="{{'texts.auction.from' | i18next}}" ng-model="auction.from"
@@ -120,7 +120,7 @@
       </div>
     </div>
     <div class="form-group"></div>
-    <h3>Freight</h3>
+    <h3>{{'texts.about_freight' | i18next}}</h3>
     <div class="form-group half">
       <input type="text" name="freight_description" class="form-control my-input" placeholder="{{'texts.auction.freight_description' | i18next}}" ng-model="auction.freight_description"
           ng-class="{'input-error' : addAuctionForm.freight_description.$invalid && (!addAuctionForm.freight_description.$pristine || clicked)}" 
@@ -137,7 +137,7 @@
         <option value="" disabled selected>{{'texts.auction.freight_size' | i18next}}</option>
         <option value="1">do 1x1 m<sup>2</sup></option>
         <option value="2">do 2x2 m<sup>2</sup></option>
-        <option value="3">více</option>
+        <option value="3">{{'texts.more' | i18next}}</option>
       </select>
     </div>
     <div class="form-group half">
@@ -146,11 +146,11 @@
         <option value="" disabled selected>{{'texts.auction.freight_weight' | i18next}}</option>
         <option value="1">do 50kg</option>
         <option value="2">do 100kg</option>
-        <option value="3">více</option>
+        <option value="3">{{'texts.more' | i18next}}</option>
       </select>
     </div>
     <div class="form-group"></div>
-    <h3>Auction</h3>
+    <h3>{{'texts.auction.auction_list' | i18next}}</h3>
     <div class="form-group half">
       <input type="text" name="email_addressee" class="form-control my-input" placeholder="{{'texts.auction.email_addressee' | i18next}}" ng-model="auction.email_addressee"
           ng-class="{'input-error' : addAuctionForm.email_addressee.$invalid && (!addAuctionForm.email_addressee.$pristine || clicked)}" 
