--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -1,28 +1,28 @@
 <div class="auction-list-page">
-    <h1>Aukce</h1>
+    <h1>{{'texts.auction.auction_list' | i18next}}</h1>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
         <div ng-if="AuctionList.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
-                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>From</span>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>{{'texts.auction.from' | i18next}}</span>
                     <span ng-click="sort()" ui-sref="auction({sort: 'from', order: order})" class="glyphicon" ng-class="arrowState('from')"></span>
                 </div>
-                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>To</span>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>{{'texts.auction.to' | i18next}}</span>
                     <span ng-click="sort()" ui-sref="auction({sort: 'to', order: order})" class="glyphicon" ng-class="arrowState('to')"></span>
                 </div>
-                <div class="auction-cell col-sm-4 col-md-4 col-lg-4"><span>Freight description</span></div>
-                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>Price</span>
+                <div class="auction-cell col-sm-4 col-md-4 col-lg-4"><span>{{'texts.auction.freight_description' | i18next}}</span></div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>{{'texts.auction.price' | i18next}}</span>
                     <span ng-click="sort()" ui-sref="auction({sort: 'price', order: order})" class="glyphicon" ng-class="arrowState('price')"></span>
                 </div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2">
                     <div>
-                        <span>End auction</span>
+                        <span>{{'texts.auction.end_auction' | i18next}}</span>
                        <span ng-click="sort()" ui-sref="auction({sort: 'end_auction', order: order})" class="glyphicon" ng-class="arrowState('end_auction')"></span>
                     </div>
                 </div>
             </div>
         </div>
         <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div ng-if="!AuctionList.length" class="no-auction">Žádné dostupné aukce...</div>
+            <div ng-if="!AuctionList.length" class="no-auction">{{'texts.auction.no_auction' | i18next}}</div>
             <div class="auction-item" ng-repeat="item in AuctionList">
                 <detail-auction auction-item="{item}" vehicles="{vehicles}"></detail-auction>
             </div>
