--- a/app/components/MyCompany/myCompanyView.html
+++ b/app/components/MyCompany/myCompanyView.html
@@ -1,47 +1,70 @@
 <h1>My company</h1>
-<div ng-if="isTransporter">
+<div class="col-md-6" ng-if="isTransporter">
 <h2>Dispatchers</h2>
-<ul class="company-list">
-    <li class="item" ng-repeat="dispatcher in dispatchers">
-        <div class="info">
-            <span>{{dispatcher.username}}</span>
-            <span>{{dispatcher.name}}</span>
-            <span>{{dispatcher.surname}}</span>
-        </div>
-        <div class="delete">
-            <span class="glyphicon glyphicon-remove" ng-click="deleteUser(dispatcher.ID)"></span>
-        </div>
-    </li>
-</ul>
+<table ng-if="dispatchers.length" class="table table-striped table-responsive company-list">
+    <tr>
+        <th>Username</th>
+        <th>Name</th>
+        <th>Surname</th>
+        <th>Actions</th>
+    </tr>
+    <tr class="item" ng-repeat="dispatcher in dispatchers">
+        <td>{{dispatcher.username}}</td>
+        <td>{{dispatcher.name}}</td>
+        <td>{{dispatcher.surname}}</td>
+        <td>
+            <span class="glyphicon glyphicon-remove delete" ng-click="deleteUser(dispatcher.ID)"></span>
+        </td>
+    </tr>
+</table>
+    <div ng-if="!dispatchers.length" class="text-center text-info">
+        No dispatchers
+    </div>
 </div>
 
-<h2>Drivers</h2>
-<ul class="company-list">
-    <li class="item" ng-repeat="driver in drivers">
-        <div class="info">
-            <span>{{driver.username}}</span>
-            <span>{{driver.name}}</span>
-            <span>{{driver.surname}}</span>
-            <span>{{driver.driver_licence}}</span>
-        </div>
-        <div class="delete">
-            <span class="glyphicon glyphicon-remove" ng-click="deleteUser(driver.ID)"></span>
-        </div>
-    </li>
-</ul>
+<div class="col-md-6">
+    <h2>Drivers</h2>
+    <table class="table table-striped table-responsive company-list">
+        <tr>
+            <th>Username</th>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Driver Licence</th>
+            <th>Actions</th>
+        </tr>
+        <tr class="item" ng-repeat="driver in drivers">
+            <td>{{driver.username}}</td>
+            <td>{{driver.name}}</td>
+            <td>{{driver.surname}}</td>
+            <td>{{driver.driver_licence}}</td>
+            <td>
+                <span class="glyphicon glyphicon-remove delete" ng-click="deleteUser(driver.ID)"></span>
+            </td>
+        </tr>
+    </table>
+</div>
 
-<h2>Vehicles</h2>
-<ul class="company-list">
-    <li class="item" ng-repeat="vehicle in vehicles">
-        <div class="info">
-            <span>Type: {{vehicle.type}}</span>
-            <span>Brand: {{vehicle.brand}}</span>
-            <span>Capacity: {{vehicle.capacity}}</span>
-            <span>RZ: {{vehicle.RZ}}</span>
-            <span>Size: {{vehicle.size}}</span>
-        </div>
-        <div class="delete">
-            <span class="glyphicon glyphicon-remove" ng-click="deleteVehicle(vehicle.ID)"></span>
-        </div>
-    </li>
-</ul>
+<div class="col-md-12">
+
+    <h2>Vehicles</h2>
+    <table class="table table-striped table-responsive company-list">
+        <tr>
+            <th>Type</th>
+            <th>Brand</th>
+            <th>Capacity</th>
+            <th>RZ</th>
+            <th>Size</th>
+            <th>Actions</th>
+        </tr>
+        <tr class="item" ng-repeat="vehicle in vehicles">
+            <td>{{vehicle.type}}</td>
+            <td>{{vehicle.brand}}</td>
+            <td>{{vehicle.capacity}}</td>
+            <td>{{vehicle.RZ}}</td>
+            <td>{{vehicle.size}}</td>
+            <td>
+                <span class="glyphicon glyphicon-remove delete" ng-click="deleteVehicle(vehicle.ID)"></span>
+            </td>
+        </tr>
+    </table>
+</div>
