--- a/css/form.css
+++ b/css/form.css
@@ -178,6 +178,13 @@ input[type=checkbox] {
         min-width: 150px;
         width: 73%;
     }
+    .phone-big-button{
+        min-width: 150px;
+        width: 73%;
+        padding-top: 5px;
+        height: 50px;
+    }
+
 
     .form-group.half{
         display: block;
