--- a/css/content.css
+++ b/css/content.css
@@ -410,7 +410,8 @@
     }
     .auction-item .favouriteButton{
         position: relative;
-        margin-top: 3px;
+        margin-top: 4px;
+        margin-left: 10px;
         font-size: 28px;
     }
     .detail-button{
